src/modal.scss
/**
 * Styles for the modal.
 *
 * Based on Lucas Menezes's post: https://dev.to/lucasm/amazing-native-modal-with-just-html-meet-element-4jpl
 */

$prefix: "bkmrklt-mdl-";
$dialog: "dialog##{$prefix}dialog";
$closeButtonX: "##{$prefix}closeButtonX";
$body: "div##{$prefix}dialog-body";

// Dim background with custom color and opacity.
#{$dialog}::backdrop {
    background: rgba(255, 106, 0, 0.5);
}

// Disable ugly border on close button due to auto-focus.
#{$dialog} *:focus {
    outline: none !important;
}

#{$dialog} {
    // Sizing
    min-width: 600px;
    max-width: 900px;
    max-height: 80vh;
    // Positioning
    top: 10%;
    left: 50%;
    transform: translateX(-50%);
    position: fixed;
    z-index: 2147483647;
    // Other
    background: #fff;
    border-radius: 1rem;
    border: 4px solid #000;
    box-sizing: border-box;
    color: #000;
    margin: 0;
    padding: 0;
    padding-top: 3.5rem;
    display: flex;
    flex-direction: column;
    overflow: hidden;

    // Default style for all buttons in the dialog
    button {
        border-radius: 4px;
        border: 2px solid #000;
        cursor: pointer;
        margin: 0 0.5rem;
        padding: 0.5rem 1rem;
    }

    // Close button (X) styling.
    #{$closeButtonX} {
        background: none;
        border: none;
        color: #000;
        font-size: 2rem;
        margin: 0;
        position: absolute;
        right: 0;
        top: 0;
    }
}

#{$body} {
    font-family: monospace;
    font-size: 16px;
    text-align: left;
    padding: 0 2.5rem 2rem;
    flex: 1;
    min-height: 0;
    overflow: auto;

    h1 {
        font-size: 1.5rem;
        margin-bottom: 0 0 2.5rem 0;
        padding: 0;
    }

    p.#{$prefix}error {
        color: #f44336;
    }

    p.#{$prefix}warning {
        color: #fbc02d;
    }

    div.#{$prefix}form-buttons {
        display: flex;
        justify-content: center;
        margin-top: 1rem;
    }
}

